--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>CATS</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="C:\Users\SAMSUNG\Desktop\WEB1-HTML\CSS\style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
