--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
   <title>CATS</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="C:\Users\SAMSUNG\Desktop\WEB-n\CSS\style.css">
+  <script src="colors.js"></script>
 </head>
 
 <body>
+  <input type="button" value="night" onclick="
+    nightDayHandler(this);
+  ">
+
   <h1><a href="index.html">CATS</a></h1>
   <div id="grid">
     <ol>
