--- a/AS.html
+++ b/AS.html
@@ -3,7 +3,7 @@
 <head>
   <title>American Shorthair</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="C:\Users\SAMSUNG\Desktop\WEB-n\CSS\style.css">
+  <link rel="stylesheet" href="style.css">
   <script src="colors.js"></script>
 </head>
 
@@ -11,7 +11,7 @@
   <input type="button" value="night" onclick="
     nightDayHandler(this);
   ">
-  
+
   <h1><a href="index.html">CATS</a></h1>
   <div id="grid">
     <ol>
